--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<div class="d-flex">
-    <!-- Sidebar -->
-    <!-- <shared-sidebar></shared-sidebar> -->
+<div class="d-block">
+  <!-- Navbar -->
+  <shared-navbar></shared-navbar>
 
-    <!-- Home Page -->
-    <home-page class="flex-fill"></home-page>
+  <!-- Home Page -->
+  <home-page></home-page>
 
-
-  </div>
+</div>
