add hero section

--- a/src/app/home/pages/home-page/home-page.component.html
+++ b/src/app/home/pages/home-page/home-page.component.html
@@ -1,8 +1,13 @@
-<div class="row p-3">
-  <div class="col-12 pt-2">
-    <div>
-      <h1>Home Page</h1>
-      <p>Welcome to the Home Page</p>
-    </div>
+<div class="row mt-5">
+  <div class="col"></div>
+  <div class="col-7 pt-2">
+    <hero-page></hero-page>
+
+    <mat-divider></mat-divider>
+
+    <!-- <projects-page></projects-page> -->
+
+    <!-- <contact-page></contact-page> -->
   </div>
+  <div class="col"></div>
 </div>
