--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -2,10 +2,10 @@
   <div class="col"></div>
   <div class="col-7 d-flex justify-content-between align-items-center">
     <div>
-      <h1>Lautaro Casella</h1>
+      <!-- <h1 class="header-name">Lautaro Casella</h1> -->
     </div>
 
-    <div class="d-flex gap-5">
+    <div class="d-flex gap-5 header-sections">
       <a href="#">
         <span>About me</span>
       </a>
