--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,13 +24,16 @@ $color-surface-mixed-a50: #918f93;
 
 html,
 body {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
   color: #f5f5f5;
   background-color: $color-surface-a0;
+  line-height: 1.5;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+p {
+  font-size: 18px;
 }
