Add section to home-page

--- a/src/app/home/pages/hero-page/hero-page.component.html
+++ b/src/app/home/pages/hero-page/hero-page.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between align-items-center mt-5">
+<div class="d-flex justify-content-between align-items-center">
   <section class="col-8 about-me">
     <h1 class="display-5 ">Hi, I’m <span class="highlight">Lautaro Casella 👋</span></h1>
     <p class="lead rol">Aspiring Game Developer | Software Developer</p>
