--- a/src/app/home/pages/home-page/home-page.component.html
+++ b/src/app/home/pages/home-page/home-page.component.html
@@ -1,13 +1,18 @@
-<div class="row mt-5">
-  <div class="col"></div>
-  <div class="col-7 pt-2">
-    <hero-page></hero-page>
-
-    <mat-divider></mat-divider>
-
-    <!-- <projects-page></projects-page> -->
-
-    <!-- <contact-page></contact-page> -->
+<div class="row gap-5">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col-7 pt-2">
+      <hero-page></hero-page>
+    </div>
+    <div class="col"></div>
   </div>
-  <div class="col"></div>
+
+  <div class="row projects-page-class">
+    <div class="col"></div>
+    <div class="col-7 pt-2">
+      <!-- <projects-page></projects-page> -->
+      <hero-page></hero-page>
+    </div>
+    <div class="col"></div>
+  </div>
 </div>
