--- a/src/app/home/pages/home-page/home-page.component.scss
+++ b/src/app/home/pages/home-page/home-page.component.scss
@@ -1,3 +1,5 @@
+@use '../../../../styles' as styles;
+
 :host {
   display: block;
 }
@@ -5,4 +7,8 @@
 .section-divider {
   border-top: 1px solid #f5f5f5;
   margin: 2rem 0;
+}
+
+.projects-page-class {
+  background-color: styles.$color-surface-mixed-a0;
 }
